k8s/overlays/dev/patch-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-credit
spec:
  selector:
    matchLabels:
      app: api-credit
  replicas: 3
  template:
    metadata:
      labels:
        app: api-credit
    spec:
      containers:
      - name: api
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
